added grids and icons

--- a/index.html
+++ b/index.html
@@ -6,12 +6,67 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
 	<!-- Stylesheets -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/79d6e7aa2a.js"></script>
+	<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 	<link rel="stylesheet" href="style.css">
 	
 	<title>Ed Ramirez</title>
 </head>
 <body>
+	<header class="showcase">
+		<div class="content">
+			<img src="media/logo.png" class="logo" alt="Ed Ramirez">
+			<div class="title">
+			 Welcome To My Site
+			</div>
+			<div class="text">
+			 Lorem ipsum dolor sit amet, no vis adhuc choro volumus. Labore aperiam at has.
+			</div>
+	    </div>
+	</header>
+	
+	<!-- Services -->
+	<section class="services">
+		<div class="container grid-3 center">
+			<div>
+			 <i class="fas fa-mobile-alt fa-3x"></i>
+			 <h3>Mobile First Development</h3>
+			 <p>Lorem ipsum dolor sit amet, no vis adhuc choro volumus. Labore aperiam at has.</p>
+		    </div>
+		
+			<div>
+			<i class="fas fa-code fa-3x"></i>
+			<h3>Code</h3>
+			<p>Lorem ipsum dolor sit amet, no vis adhuc choro volumus. Labore aperiam at has.</p>
+		    </div>
+		
+			<div>
+			<i class="fas fa-briefcase fa-3x"></i>
+			<h3>Freelancing Projects</h3>
+			<p>Lorem ipsum dolor sit amet, no vis adhuc choro volumus. Labore aperiam at has.</p>
+		    </div>
+		</div>    	
+	</section>
+	
+	<!-- About -->
+	<section class="about bg-light">
+		<div class="container">
+			<div class="grid-2">
+				<div class="center">
+					<i class="fas fa-laptop-code fa-10x"></i>
+				</div>	
+				
+				<div>
+					<h3>About Me</h3>
+					<p>Lorem ipsum dolor sit amet, no vis adhuc choro volumus. Labore aperiam at has. Veri epicurei sapientem te per, blandit phaedrum contentiones ut mei. Omnes corrumpit deseruisse eam ea, id quem brute inani eam. Ei sed stet quidam, fabellas concludaturque te vim.</p>
+				</div>						
+			</div>
+		</div>
+	</section>
+	
+	<footer class="center bg0light">
+		<p>Ed Ramirez &copy; 2019</p>
+	</footer>
 
 </body>
 </html>
